This fixes overlapping shadows.
Those values are hardcoded. Can't be done dynamically w/o a major LESS
refacroting.

--- a/assets/less/responsive/mobile/basic/body.less
+++ b/assets/less/responsive/mobile/basic/body.less
@@ -71,6 +71,7 @@ body {
 			float: left;
 			margin-left: (-1 * @mobileNavWidth);
 			overflow: scroll;
+			z-index: 1040;
 			padding: 0;
 			-webkit-overflow-scrolling: touch;
 			.box-fix;
